using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts.Earth.Common_Enemies
{
    public class EnemiesAnimationStrings
    {
        internal static string hasTarget = "hasTarget";
        internal static string canMove = "canMove";
        internal static string isAlive = "IsAlive";
        internal static string summonTrigger = "SummonTrigger"; // trigger gọi clip Summon
    }
}
